--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
