--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.7",
     "@tailwindcss/vite": "^4.1.17",
     "daisyui": "^5.4.7",
+    "dotenv": "^17.2.3",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
