--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.17.7",
     "@tailwindcss/vite": "^4.1.17",
-    "daisyui": "^5.4.7",
+    "chart.js": "^4.5.1",
+    "daisyui": "^5.5.14",
     "dotenv": "^17.2.3",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "recharts": "^3.4.1",
